2010-02-20 Philipp Klaus Krause <pkk AT spth.de>
	* device/lib/gbz80/div.s:
	  Fixed mixed-sign division and modulo in gbz80 port.

2010-02-20 Borut Razem <borut.razem AT siol.net>

	* support/makebin/makebin.c: addad support for GameBoj binary file format
	* all.dsp, sdcc.dsw, support/makebin/makebin.dsp:
	  addad makebin to the MSVC project

2010-02-19 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/rt rack.h,
	  src/mcs51/rtrack.c,
	  src/mcs51/ralloc.h,
	  src/mcs51/gen.c: Implemented tracking of symbols and dptr.
	  Set environment variable SDCC_REGTRACK if you want to enable
	  register tracking. If you want diagnostic output use option
	  --fverbose-asm and additionally set SDCC_REGTRACK_VERBOSE

2010-02-18 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c: search C runtime initialization object files
	  crt0.rel in system library directories, then in user defined
	  library directories

2010-02-16 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: remove crt0.rel for z80 and gb
	* src/SDCCmain.c:
	  fixed the fist part of bug #2951083: -o not working as expected:
	  rename the linker output file name to -o binary file name
	* sdas/linksrc/lkaomf51.c:
	  fixed the second part of bug #2951083: -o not working as expected:
	  remove the file extension in any case

2010-02-16 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/peeph-gbz80.def,
	  device/include/asm/z80/features.h,
	  device/lib/gbz80/Makefile.in,
	  device/lib/gbz80/div.s,
	  device/lib/gbz80/mul.s,
	  support/regression/ports/gbz80/spec.mk:
	  Made gbz80 regression tests compile again.

2010-02-11 Borut Razem <borut.razem AT siol.net>

	* sdas/linksrc/lkmain.c: removed unneeded gb linker initialization

2010-02-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/clean.mk: also clean huge library

2010-02-10 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/gen.c: (genAssign literal) loading via accumulator if it